--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/runtime": "^7.17.9",
+    "@reduxjs/toolkit": "^1.8.5",
+    "classnames": "^2.3.1",
     "dotenv-webpack": "^7.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "redux-saga": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
