--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "^2.7.1",
     "sass": "^1.50.1",
     "sass-loader": "^12.6.0",
     "webpack": "^5.72.0",
